fix overflowing styles, working on music page

--- a/northwest.band/components/navbar/styles.module.scss
+++ b/northwest.band/components/navbar/styles.module.scss
@@ -18,3 +18,9 @@
 .link {
   cursor: pointer;
 }
+
+@media (max-width: 600px) {
+  .navbar {
+    height: 12vh;
+  }
+}
