--- a/northwest.band/styles/globals.scss
+++ b/northwest.band/styles/globals.scss
@@ -1,6 +1,4 @@
-:root {
- --pink: #fec0d3;
-}
+@import './variables.scss';
 
 html,
 body {
